added more documentation including running example on how to use the API to batch process an entire directory

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Author: Michael Höhle
 Maintainer: Michael Höhle <hoehle@math.su.se>
 Description: Take pictures of your freehand circle and measure how perfect it is. Includes a ShinyApp to automatize the judging of the World Freehand Circle Championship.
 Depends: imager, magrittr, pryr
+Suggests: purrr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
