--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Author: Michael Höhle
 Maintainer: Michael Höhle <hoehle@math.su.se>
 Description: Take pictures of your freehand circle and measure how perfect it is. Includes a ShinyApp to automatize the judging of the World Freehand Circle Championship.
 Depends: imager, magrittr, pryr
-Suggests: purrr
+Suggests: purrr, shiny
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0
+RoxygenNote: 7.0.2
